[package]
name = "pfview"
version = "0.1.0"
edition = "2021"
authors = ["Anirudh Konduru <akonduru@seas.upenn.edu>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = { version = "0.19" }
anyhow = "1.0"
memmap2 = "0.5.10"
chrono = "0.4"
colored = "2.0"
